--- a/ordernow/index.css
+++ b/ordernow/index.css
@@ -19,6 +19,107 @@
   background-color: rgba(255, 255, 255, 1);
 } */
 
+/* .custom-file-upload {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  margin: 0;
+  /*font-size: 16px; 
+  font-family: Arial, sans-serif;
+  /* color: #ffffff; 
+  background-color: #007bff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+} */
+
+.details-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px; 
+}
+
+.desktop4-text32 {
+  font-size: 16px; 
+  margin-right: 10px; 
+}
+
+.brand-name-input {
+  padding: 8px;
+  font-size: 16px; 
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 200px;
+}
+
+.desktop4-rectangle17 {
+  margin-left: 10px;
+  width: 200px; 
+  height: auto; 
+}
+
+
+.bulk-orders-button {
+  display: inline-block;
+  background-color: #007bff;
+  color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.bulk-orders-button:hover {
+  background-color: #0056b3;
+}
+
+.medium-orders-button {
+  display: inline-block;
+  background-color: #007bff;
+  color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.medium-orders-button:hover {
+  background-color: #0056b3;
+}
+
+.custom-orders-button {
+  display: inline-block;
+  background-color: #007bff;
+  color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.cutom-orders-button:hover {
+  background-color: #0056b3;
+}
+
+.custom-file-upload span {
+  display: inline-block;
+  vertical-align: middle;
+  pointer-events: none;
+}
+
+.custom-file-upload input[type="file"] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+
 .lowerbox{
   position: relative;
   top: -29px;
